# Verge

./: .editorconfig  .env.example  .gitignore  Ash_task1.md  CONTRIBUTING.md  Makefile  README.md  conftest.py  pnpm-lock.yaml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
apps/console/: ASH_UI_NOTES.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/console/public/: manifest.json  sw.js
apps/console/src/: App.tsx  api.ts  i18n.ts  index.css  main.tsx  router.tsx
cli/: pyproject.toml
cli/tests/: test_cli_bundle.py
cli/verge_cli/: cli.py
deploy/: .env.example  README.md  docker-compose.yml
deploy/bundles/: README.md
deploy/bundles/demo-0.3.0/: bundle.manifest.json  bundle.manifest.sig.json  sbom.cdx.json
deploy/initdb/: postgis.sql  timescale.sql
deploy/k8s/: configmap.yaml
docs/: ARCHITECTURE.md  CONSOLE_UI_PLAN.md  PHASED_BUILD_PLAN.md  PRODUCT_AUDIT_AND_ROADMAP.md  Verge.md  design-system.md  design_plan.md  dex.md  progress.md
docs/design-resources/: README.md
eval/: __init__.py  harness.py  runtime.py
eval/agents/: __init__.py  metrics.py
eval/agents/gold/: briefs.json  specialists.json
eval/agents/tests/: test_agent_eval.py  test_specialist_eval.py
eval/replays/vizag-2025-01/: generate.py
eval/tests/: test_harness.py  test_runtime.py
scripts/: commit_batch.py  sign_bundle.py
services/api/: alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/tests/: conftest.py  test_actions_routes.py  test_api.py  test_auth_rbac.py  test_bundle_ops.py  test_degradation_matrix.py  test_demo_seed.py  test_doc_hooks.py  test_docs_routes.py  test_emergency_routes.py  test_eval_report_route.py  test_evidence_routes.py  test_fleet.py  test_hooks.py  test_investigate_route.py  test_memory_routes.py  test_ops_routes.py  test_plant_graph_route.py  test_readings_contract.py  test_sql_persistence.py  test_store_contract.py  test_telemetry.py  test_timescale_writer.py  test_vision_events_route.py  test_vision_routes.py  test_voice_events_route.py  test_voice_languages_route.py  test_voice_routes.py  test_workers_routes.py
services/api/verge_api/: __init__.py  auth.py  db.py  degradation.py  demo_seed.py  doc_hooks.py  emergency.py  evidence_store.py  factory.py  fleet_catalog.py  frame_cache.py  graph_view.py  hooks.py  main.py  metrics_counters.py  ops.py  rbac.py  seed.py  (+7 more)
services/compliance/: pyproject.toml
services/compliance/tests/: test_actions.py  test_changes.py  test_compliance.py  test_evidence_levels.py  test_incident_report.py
services/compliance/verge_compliance/: __init__.py  actions.py  changes.py  clauses.py  evidence.py  evidence_levels.py  gaps.py  incident_report.py  render.py
services/compliance/verge_compliance/clauses/: oisd-2023.json  oisd.json  peso.json
services/edge-gateway/: pyproject.toml
services/lessons/: pyproject.toml
services/lessons/tests/: test_match.py
services/lessons/verge_lessons/: __init__.py  corpus.py  match.py
services/lessons/verge_lessons/fixtures/: vizag-lessons.json
services/maintenance/: pyproject.toml
services/maintenance/tests/: test_rca.py
services/maintenance/verge_maintenance/: __init__.py  rca.py  store.py
services/maintenance/verge_maintenance/fixtures/: vizag-work-orders.csv
services/orchestrator/: pyproject.toml
services/orchestrator/tests/: test_dispatch.py  test_orchestrator.py
services/orchestrator/verge_orchestrator/: __init__.py  alerts.py  dispatch.py  evidence.py  orchestrate.py  report.py
services/risk-engine/: pyproject.toml
services/risk-engine/tests/: test_engine.py  test_fusion_predicates.py  test_health.py  test_ml_canary.py  test_ml_layer_registry.py  test_no_llm_import.py
services/risk-engine/verge_risk/: __main__.py  engine.py  health.py  ml_layer.py  rules.py  runner.py
services/risk-engine/verge_risk/rules/: starter.yaml
services/twin/: pyproject.toml
services/twin/tests/: test_commission.py  test_geometry.py  test_geometry_fuzz.py  test_neo4j_query.py  test_neo4j_sync.py  test_plant.py
services/twin/verge_twin/: __init__.py  commission.py  geometry.py  neo4j_query.py  neo4j_sync.py  plant.py
services/twin/verge_twin/plants/: bp-texas-raffinate.yaml  jaipur-tank-farm.yaml  vizag-coke-oven.yaml  vizag-sensors.csv
services/vision/: pyproject.toml
services/vision/tests/: test_ultralytics_detector.py
services/vision/verge_vision/: __init__.py  cameras.py  detect.py
services/vision/verge_vision/samples/: vizag-cameras.json
services/voice/: README.md  pyproject.toml
services/voice/tests/: test_languages.py  test_voice.py
services/voice/verge_voice/: __init__.py  alert_preview.py  languages.py  near_miss.py  transcribe.py
sims/verge_sims/: __init__.py  scenario.py
tests/: test_e2e_live_path.py  test_unified_runtime.py
tests/integration/: test_memory_voice_path.py
(+119 files in other folders)
