[project]
name = "verge-compliance"
version = "0.3.0"
description = "OISD/Factory Act/DGMS gap detection + regulator-ready evidence packs (spec §5)."
requires-python = ">=3.11"
dependencies = ["verge-schema", "verge-audit", "verge-risk-engine", "verge-twin"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["verge_compliance"]

[tool.hatch.build.targets.wheel.force-include]
"verge_compliance/clauses" = "verge_compliance/clauses"

[tool.uv.sources]
verge-schema = { workspace = true }
verge-audit = { workspace = true }
verge-risk-engine = { workspace = true }
verge-twin = { workspace = true }
