[project]
name = "verge-maintenance"
version = "0.1.0"
description = "Work-order store + RCA helpers for the Maintenance specialist (Phase 3A)."
requires-python = ">=3.11"
dependencies = ["verge-schema"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["verge_maintenance"]

[tool.hatch.build.targets.wheel.force-include]
"verge_maintenance/fixtures" = "verge_maintenance/fixtures"

[tool.uv.sources]
verge-schema = { workspace = true }
