[project]
name = "verge-orchestrator"
version = "0.3.0"
description = "Emergency Response Orchestrator — advisory alerts, evidence packs, report drafts (P8)."
requires-python = ">=3.11"
dependencies = ["verge-schema", "verge-audit", "verge-llm"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["verge_orchestrator"]

[tool.uv.sources]
verge-schema = { workspace = true }
verge-audit = { workspace = true }
verge-llm = { workspace = true }
