[project]
name = "verge-risk-engine"
version = "0.3.0"
description = "Compound Risk Engine + sensor-health plane. LLM-independent (P1)."
requires-python = ">=3.11"
dependencies = ["verge-schema", "verge-forecaster", "pyyaml>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["verge_risk"]

[tool.uv.sources]
verge-schema = { workspace = true }
verge-forecaster = { workspace = true }
