[project]
name = "verge-voice"
version = "0.3.0"
description = "Speechmatics-backed voice transcription and structured handover evidence."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "verge-llm",
    "verge-schema",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["verge_voice"]

[tool.uv.sources]
verge-llm = { workspace = true }
verge-schema = { workspace = true }
